package com.one.product;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 7/22/2021 11:16 PM
*/

public abstract class ConcreteProduct implements Product {
}
